<resources>    <string name="app_name">Nutrition</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="analyes">Analyse</string>    <string name="ingr_hint">Enter each ingredient on a new line.</string>    <string name="required">Required</string>    <string name="food">Food: </string>    <string name="qty">Qty: </string>    <string name="unit">Unit: </string>    <string name="calories">Calories: </string>    <string name="weight">Weight: </string>    <string name="next">Next</string>    <string name="home">Home</string>    <string name="ingredient">Ingredients</string>    <string name="nutritionDetails">Nutrition details</string></resources>