<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="android.view.View" />
        <variable
            name="model"
            type="com.latiff.nutrition.models.ParsedModel" />
    </data>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ingredient"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            android:id="@+id/image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp"
            android:id="@+id/foodTxt"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="@id/foodTxt"
            app:layout_constraintTop_toBottomOf="@id/foodTxt"
            app:layout_constraintStart_toEndOf="@id/foodTxt"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{model.food}"
            android:id="@+id/foodValue"/>
        <View
            android:layout_width="8dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/view"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            app:layout_constraintTop_toBottomOf="@id/foodTxt"
            app:layout_constraintStart_toStartOf="@id/foodTxt"
            android:layout_marginTop="5dp"
            android:id="@+id/qtyTxt"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/qtyTxt"
            app:layout_constraintBottom_toBottomOf="@id/qtyTxt"
            app:layout_constraintStart_toEndOf="@id/qtyTxt"
            app:layout_constraintEnd_toStartOf="@id/view"
             android:id="@+id/qtyValue"
            android:text="@{model.quantity+``}"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            app:layout_constraintTop_toBottomOf="@id/foodTxt"
            app:layout_constraintStart_toEndOf="@id/view"
            android:layout_marginTop="5dp"
            android:id="@+id/unitTxt"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/unitTxt"
            app:layout_constraintBottom_toBottomOf="@id/unitTxt"
            app:layout_constraintStart_toEndOf="@id/unitTxt"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{model.measure}"
            android:id="@+id/unitValue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            app:layout_constraintTop_toBottomOf="@id/qtyTxt"
            app:layout_constraintStart_toStartOf="@id/foodTxt"
            android:layout_marginTop="5dp"
            android:id="@+id/caloriesTxt"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/caloriesTxt"
            app:layout_constraintBottom_toBottomOf="@id/caloriesTxt"
            app:layout_constraintStart_toEndOf="@id/caloriesTxt"
            app:layout_constraintEnd_toStartOf="@id/view"
            android:id="@+id/caloriesValue"
            numberRounded="@{model.nutrients.ENERC_KCAL.quantity}"
            unitMeasure="@{model.nutrients.ENERC_KCAL.unit}"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            app:layout_constraintTop_toTopOf="@id/caloriesTxt"
            app:layout_constraintStart_toEndOf="@id/view"
             android:id="@+id/weightTxt"
            app:layout_constraintBottom_toBottomOf="parent"
             android:textColor="@color/black"

            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/weightTxt"
            app:layout_constraintBottom_toBottomOf="@id/weightTxt"
            app:layout_constraintStart_toEndOf="@id/weightTxt"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/weightValue"
            numberRounded="@{model.weight}"
            unitMeasure="@{` g`}"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</layout>